--- a/index.html
+++ b/index.html
@@ -103,11 +103,38 @@
                                 </div>
                             </div>                       
                         </div>
-                    </div> <!--content-team-->
+                    </div> <!--end content-team-->
 
-                </div>
-            </div>
-        </section>
+                </div> <!-- end container -->
+            </div> <!-- end class content -->
+        </section> <!-- end section-->
+
+        <footer>
+            <div class="container">
+                <div class="footer-grid">
+                    <div class="footer-items">
+                        <h2>Lorem, ipsum dolor.</h2>
+                        <p>Lorem ipsum dolor sit.</p>
+                    </div>
+                    <div class="footer-items">
+                        <h2>Lorem, ipsum dolor.</h2>
+                        <p>Lorem ipsum dolor sit.</p>
+                    </div>
+                    <div class="footer-items">
+                        <h2>Lorem, ipsum dolor.</h2>
+                        <p>Lorem ipsum dolor sit.</p>
+                    </div>
+                    <div class="footer-items">
+                        <h2>Lorem, ipsum dolor.</h2>
+                        <p>Lorem ipsum dolor sit.</p>
+                        <input type="email" placeholder="youe email">
+                        <div class="btn">
+                            <input type="sunmit" value="ENTER">
+                        </div> <!-- end btn -->               
+                    </div>
+                </div> <!-- end footer grid -->
+            </div><!-- end footer container -->
+        </footer>
 
     </body>
 </html>
